# obsidian-sync

./: .gitignore  .gitmodules  README.md  package.sh  pyproject.toml
obsidian-sync/: __init__.py  anki_addon.py  change_log.py  config.json  config_handler.py  constants.py  html_to_markdown.py  main.py  manifest.json  markup_converter.py  note_types.py  notes_synchronizer.py  obsidian_note_finder.py  obsidian_note_parser.py  re_patterns.py  templates_synchronizer.py  utils.py
obsidian-sync/builders/: obsidian_note_builder.py
obsidian-sync/markdown_extensions/: attr_list.py  codehilite.py  fenced_code.py  wikilinks.py
obsidian-sync/note_builders/: obsidian_note_builder.py
obsidian-sync/obsidian_sync/: addon_config.py  addon_metadata.py  anki_addon.py  constants.py  file_utils.py  markup_translator.py  note_types.py  template.py  utils.py
obsidian-sync/obsidian_sync/anki/: anki_app.py  anki_content.py  anki_note.py  anki_note_changes.py  (+5 more)
obsidian-sync/parsers/: obsidian_note_parser.py
obsidian-sync/synchronizers/: notes_synchronizer.py  templates_synchronizer.py
tests/: anki_mock.py  anki_test_app.py  conftest.py  constants.py  test_anki_test_app_operations.py  test_file_parsing.py  test_markup_conversions.py  test_markup_translator.py  test_md_html_conversions.py  utils.py
tests/anki/: test_anki_app.py
tests/anki-initial-data/: prefs21.db
tests/obsidian/: test_notes_manager.py  test_obsidian_file.py
tests/synchronizers/: test_front_and_back_notes_synchronization.py  test_media_synchronizer.py  test_notes_synchronizer.py  test_templates_synchronizer.py
(+51 files in other folders)
