[tool.poetry]
name = "obsidian-sync"
version = "0.1.0"
description = ""
authors = ["Petio Petrov <petioptrv@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
anki = "^24.6.3"
pytest = "^8.3.3"
pyqt6 = "6.6.1"
pyqt6-qt6 = "6.6.2"
pyqt6-webengine = "6.6.0"
pyqt6-webengine-qt6 = "6.6.2"
pyqt6-sip = "13.6.0"


[tool.poetry.group.dev.dependencies]
pillow = "^11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
